# python-project-49

./: Makefile  README.md  demo.cast  demo2.cast  demo3.cast  demo4.cast  demo5.cast  pyproject.toml
brain_games/: cli.py  engine.py  first_game.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain-games.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc_game.py  first_game.py
