[tool.poetry]
name = "hexlet-code"
version = "0.1.7"
description = ""
authors = ["Yana Gubskaya <Yana.gubskaja87@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_even:main"
brain-even = "brain_games.scripts.brain_even:main"
first_game = "brain_games.scripts.first_game:main"
calc_game = "brain_games.scripts.calc_game:main"
brain_gcd = "brain_games.scripts.brain_gcd:main"
brain_progression = "brain_games.scripts.brain_progression:main"
